--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-3e0a6a03.js">
+		<link rel="modulepreload" href="./_app/immutable/start-210f827d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-05e68e40.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9ecf994d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-3b774151.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-4e7c115a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9d2da4ca.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-9f9a4490.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-b4aa2296.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-27ac26f2.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-c0d9cf2b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-31d24f85.js">
@@ -121,7 +121,7 @@
   <section class="relative mx-auto pt-6 sm:pt-10 px-6"><div class="flex flex-wrap gap-1.5 sm:gap-3 text-xs uppercase font-bold text-custom-darkpurple justify-center"><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid bg-utxo-gradient border-0 text-white">Hlavní přednášející (14)
           
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Vše
-          (42)
+          (44)
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Základy
           
         </div><div class="py-1.5 sm:py-2 px-2.5 sm:px-8 rounded-lg shadow border border-solid border-custom-darkpurple  hover:bg-custom-darkpurple hover:text-white hover:border-transparent cursor-pointer">Bitcoin
@@ -417,202 +417,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-kracik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Kracík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
 
 
 
@@ -638,45 +443,6 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
 
 
@@ -690,7 +456,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
 
 
 
@@ -703,7 +469,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
 
 
 
@@ -716,7 +482,20 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
 
 
 
@@ -742,7 +521,72 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-olbrech-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Olbrech"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
 
 
 
@@ -756,6 +600,162 @@
 
 
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dalibor Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
 
 
 
@@ -1048,14 +1048,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="h7acha">
-			import { start } from "./_app/immutable/start-3e0a6a03.js";
+		<script type="module" data-sveltekit-hydrate="1h6rfd6">
+			import { start } from "./_app/immutable/start-210f827d.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="h7acha"]').parentNode,
-				version: "1681994052145",
+				target: document.querySelector('[data-sveltekit-hydrate="1h6rfd6"]').parentNode,
+				version: "1682882337950",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
